# mode7-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  TODO.txt
archive/: ModelLoader.hpp  RacingLine.hpp
assets/: car.txt  fragment.glsl  vertex.glsl
assets/animations/: test_anim.json
assets/blender/: base.blend  skybox.blend  skybox.blend1  skybox.dae  sphere.blend  sphere.blend1  straight.blend  straight.blend1  test.blend  tight45.blend  tight90.blend  track.blend  track.blend1  track.dae  tree1.blend  tree1.blend1  tree1.dae  wide45.blend  wide45.blend1  wide90.blend
assets/blender/hud/: health_bar.blend  health_bar.blend1  speedometer.blend  speedometer.blend1
assets/blender/track_parts/: base.blend  oval.blend  oval.blend1  oval_small.blend  oval_small.blend1  slice.blend  slice.blend1  straight10.blend  straight10.blend1  straight_long.blend  straight_long.blend1  test_track.blend  turn10_45.blend  turn10_45.blend1  wide_90.blend  wide_90.blend1
assets/cars/: config.txt  higha.txt  testCar.json  vctest.txt
assets/cars/newcar/: accelmap.csv  accelmap.ods  brakemap.csv  brakemap.ods  constants.json  driftmap.csv  driftmap.ods  turnmap.csv  turnmap.ods  velcurve.ods
assets/cars/testcar/: drift.txt  gas.txt  wheel.txt
assets/data/: car.txt
assets/gimp/: car-side.xcf  car.xcf  drop_shadow.xcf  hud.xcf  road.xcf  skybox.xcf  straight_long.xcf  track.xcf  tree.xcf
assets/models/: oval.dae  oval2.dae  oval_small.dae  skybox.dae  skybox.mtl  sphere.mtl  test.dae  track.dae  track.mtl  tree1.dae
assets/models/hud/: health_bar.dae  health_bar4.dae  speedometer.dae
assets/reference/car/: F1 low poly.blend  t0.xcf  t20.xcf  template.xcf  template2.xcf
assets/shaders/: debugpath_v.glsl  depth_f.glsl  depth_v.glsl  hud_f.glsl  hud_v.glsl  light_f.glsl  light_v.glsl  pass_f.glsl  screen_f.glsl  shadow_f.glsl  shadow_v.glsl  skybox_f.glsl  skybox_v.glsl  sprite_f.glsl  sprite_v.glsl  text_f.glsl  text_v.glsl
assets/templates/: map.ods
assets/textures/: carsheet.xcf  default.xcf
assets/track_data/: oval.line  oval.tasm  oval2.line  terrain.xcf  test.json  track1.blend  track1.blend1  track1.obj.tdat
audio/: CMakeLists.txt
audio/include/: Input.hpp  Master.hpp  Mixer.hpp  Output.hpp  WaveformGenerator.hpp
audio/src/: Master.cpp  Mixer.cpp  WaveformGenerator.cpp
editor/: monitor.c  monitor.h
geometry/: CMakeLists.txt
geometry/include/: Line.hpp  bezier.h  geometry.h  line.h
geometry/src/: Line.cpp  bezier.c  geometry.c  line.c
include/: AI.hpp  Animation.hpp  BBox.hpp  Camera.hpp  Car.hpp  Clock.hpp  Collisions.hpp  ControlMap.hpp  ControlSlider.hpp  DebugPath.hpp  DebugText.hpp  DropShadow.hpp  FrameBuffer.hpp  Group.hpp  HUD.hpp  Keyboard.hpp  Light.hpp  Line.hpp  Line2D.hpp  LineBuilder.hpp  Material.hpp  Mesh.hpp  MeshUpdateWorker.hpp  ModelLoader.hpp  Object.hpp  Particle.hpp  ParticleEmitter.hpp  ParticleUpdateWorker.hpp  Physics.hpp  RacingLine.hpp  Rect.hpp  ResponseCurve.hpp  Scene.hpp  Scheduler.hpp  Screen.hpp  Shader.hpp  TexCache.hpp  Texture.hpp  Timer.hpp  Track.hpp  (+7 more)
installer/: go.mod  go.sum  main.go
qtree/: CMakeLists.txt
qtree/include/: Box.hpp  Bucket.hpp  DummyMember.hpp  QTree.hpp  QTreeMember.hpp
qtree/src/: Box.cpp  Bucket.cpp  DummyMember.cpp  QTree.cpp
sim/: CMakeLists.txt  car.c  car.h  circle.track  line.c  main.c  monitor.h  racingline.c  racingline.h  rect.c  rect.h  test.line  track.py  vec2.h
src/: AI.cpp  Animation.cpp  BBox.cpp  Camera.cpp  Car.cpp  Clock.cpp  Collisions.cpp  ControlMap.cpp  ControlSlider.cpp  DebugPath.cpp  DebugText.cpp  DropShadow.cpp  FrameBuffer.cpp  Group.cpp  HUD.cpp  Keyboard.cpp  Light.cpp  Line.cpp  Line2D.cpp  LineBuilder.cpp  Material.cpp  Mesh.cpp  MeshUpdateWorker.cpp  ModelLoader.cpp  Object.cpp  OldTrack.cpp  Particle.cpp  ParticleEmitter.cpp  ParticleUpdateWorker.cpp  Physics.cpp  RacingLine.cpp  ResponseCurve.cpp  Scene.cpp  Scheduler.cpp  Scheduler.tpp  Screen.cpp  Shader.cpp  TexCache.cpp  Texture.cpp  Timer.cpp  (+7 more)
tasm/: CMakeLists.txt  line.h  main.c
tests/: test.cpp
tools/: CMakeLists.txt
tools/assetmanager/: go.mod  pull.go  push.go  root.go
tools/editor/: CMakeLists.txt
tools/installer/: go.mod  go.sum  pull.go  push.go  root.go  version.go
tools/licensetool/: go.mod  licensetool.go  notice.txt
tools/old/: Builder.hpp  Editor.hpp  Track.hpp
tools/old/editor/: main.c
tools/old/sim/: getline.h  monitor.c  test.track
tools/old/tasm/: main.c  tasm.py  test.line  util.c  vec2.c
tools/sim/: main.c  vec2.c
tools/svg2track/: CMakeLists.txt  default.blend  default.blend1  default.mtl
tools/svg2track-gui/: Cargo.toml
tools/svg2track-gui/src/: main.rs  svg2track-gui.ui
tools/svg2track/assets/default/: default.blend  default.blend1
tools/svg2track/src/: arraylist.c  arraylist.h  assetpack.c  assetpack.h  bezier.c  bezier.h  calculus.c  calculus.h  geometry.c  geometry.h  line.c  line.h  main.c  material.c  material.h  matrix.c  matrix.h  mesh.c  mesh.h  preview.c  preview.h  svg.c  svg.h  track.c  track.h  trackdata.c  trackdata.h  wavefront.c  wavefront.h
tools/tasm/: main.c  oval.tasm  tasm.py  test.line  test.tasm  util.h  vec2.h
tools/track_editor/: CMakeLists.txt
tools/track_editor/src/: Joint.cpp  Track.cpp
tools/track_editor_core/: CMakeLists.txt
tools/track_editor_core/include/: Joint.hpp  Part.hpp  Piece.hpp  track_editor.hpp  vec2.hpp
tools/track_editor_core/src/: Builder.cpp  Part.cpp  Piece.cpp  vec2.cpp
tools/track_editor_linux/: CMakeLists.txt
tools/track_editor_linux/include/: Canvas.hpp  Library.hpp
tools/track_editor_linux/src/: Canvas.cpp  Library.cpp  main.cpp
tools/trackeditor/: straight.tp  trackeditor.py
tools/trackeditor/pieces/: Straight.tpb
trackdata/: CMakeLists.txt
trackdata/include/: TrackData.hpp  trackdata.h
trackdata/src/: TrackData.cpp  trackdata.c
worker/: CMakeLists.txt
worker/include/: Scheduler.hpp  SyncData.hpp  Worker.hpp
worker/src/: Scheduler.inl  SyncData.cpp  Worker.cpp
